--- a/config/tbk-webpay.yml.example
+++ b/config/tbk-webpay.yml.example
@@ -1,4 +1,6 @@
 production:
   cgi_base_url: "http://example.com/cgi"
+  tbk_root_path: "/home/deploy/example.com/cgi"
 staging:
   cgi_base_url: "http://staging.example.com/cgi"
+  tbk_root_path: "/home/deploy/staging.example.com/cgi"
